*** PLEASE FOLLOW THIS FORMAT: [<priority indicator, more stars = higher priority>] <description> [<PR URL>]

17.0
-----
* [*] Comments: Switched comments filter from dropdown to tabs. [https://github.com/wordpress-mobile/WordPress-Android/pull/14140]

16.9
-----
* [*] Starter Page Templates: Adds the option to choose between mobile, tablet or desktop thumbnails and previews
* [**] Site Creation: Adds filterable categories to the site design picker when creating a WordPress.com site [#14144]
* [**] The classic editor will no longer be available for new posts soon, but this won’t affect editing any existing posts or pages. Users should consider switching over to the Block Editor now. [#14205]
* [**] My Site: Quick Start was completely redesigned and is now always shown after creating a site [https://github.com/wordpress-mobile/WordPress-Android/pull/14122]

16.8.1
------
* [**] Block Editor: Reduce the number of items per page when fetching reusable blocks to prevent a crash. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3227]

16.8
-----
* [*] Block Editor: Fixed block mover title wording for better clarity from 'Move block position' to 'Change block position'. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3049]
* [**] Block Editor: Add support for setting Cover block focal point. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3028]
* [**] Prevent deleting published homepages which would have the effect of breaking a site. [#14061]
* [**] Prevent converting published homepage to a draft in the page list and settings which would have the effect of breaking a site. [#14061]
* [**] People management on P2s: adds capability to generate, share and disable invite links for roles on your P2 site [https://github.com/wordpress-mobile/WordPress-Android/pull/14044]

16.7
-----
* [*] Adds tablet mode in site and post/page previews [https://github.com/wordpress-mobile/WordPress-Android/pull/13787]